--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
   font-size: 26px;
   color: #ffffff;
   height: 100vh;
-  perspective: 1px;
   overflow-x: hidden;
   overflow-y: auto;
 
@@ -44,7 +43,7 @@ body {
 }
 
 canvas {
-  background: #1d1d1d;
+  opacity: 0.5;
   position: absolute;
   top: 0;
   left: 0;
@@ -52,15 +51,6 @@ canvas {
   z-index: -1;
   image-rendering: optimizeQuality;
   display: flex;
-
-  -webkit-mask-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(0, 0, 0, 1)),
-    to(rgba(0, 0, 0, 0))
-  );
-  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
 .dots {
@@ -82,16 +72,52 @@ canvas {
     var(--dot-color);
 }
 
-.fixed-icon {
-  position: fixed;
-  top: 10px;
-  right: 20px;
-  font-size: 1.5em;
-  z-index: 1000;
+.navbar .navbar-nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
+
+.no-underline {
+  text-decoration: none;
 }
 
 .navbar {
   z-index: 100;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.fade-in {
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-fill-mode: forwards; /* Keeps the element at the state of the last keyframe after animation ends */
+}
+
+.fade-out {
+  animation-name: fadeOut;
+  animation-duration: 1s;
+  animation-fill-mode: forwards; /* Keeps the element at the state of the last keyframe after animation ends */
 }
 
 /* TYPEWRITER */
